// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarItem render non-highlighted SideBarItem that navigates to /settings 1`] = `
<MenuItem
  className="sidebar-item "
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        name="settings"
        size="large"
      />
    </span>
    <span>
      Settings
    </span>
  </div>
</MenuItem>
`;

exports[`SideBarItem renders empty SideBarItem 1`] = `
<MenuItem
  className="sidebar-item "
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        size="large"
      />
    </span>
    <span />
  </div>
</MenuItem>
`;

exports[`SideBarItem renders highlighted SideBarItem that navigates to /settings 1`] = `
<MenuItem
  className="sidebar-item "
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        name="settings"
        size="large"
      />
    </span>
    <span>
      Settings
    </span>
  </div>
</MenuItem>
`;
